--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ pre {
 
 /*=================================================================*/
 /*                      PRELOADER                              
-/*=================================================================*/
+/*=================================================================
 .infinity {
   width: 120px;
   height: 60px;
@@ -406,7 +406,7 @@ pre {
 .goo-outer {
   display: none;
 }
-
+*/
 /*=================================================================*/
 /*                      HEADER                              
 /*=================================================================*/
