--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,10 @@ pre {
   border-radius: 0;
 }
 
+.margin {
+  margin: 20px;
+}
+
 /*=================================================================*/
 /*                      PRELOADER                              
 /*=================================================================
